--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 
-<div class="container">
+<!--<div class="container">
     <a routerLink="/article"  class="btn waves-effect waves-light">博客列表</a>
     <a routerLink="/articledetail/1" class="btn waves-effect waves-light">最多阅读</a>
 </div>
-<router-outlet ></router-outlet>
+<br>-->
+<!--<app-login></app-login>-->
+<!--<h1>{{title}}</h1>-->
+<router-outlet></router-outlet>
